refactor(test): 테스트 가독성 수정